apps/ecommerce/ecommerce/templates/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: ecommerce

spec:

  selector:
    app: ecommerce

  ports:

  - port: 80

    targetPort: 8000

  type: ClusterIP
